# xgboost-testing

./: CMakeLists.txt  README  compile.sh  ex_xgb.cpp  test_cpp.py  test_model_slice.py  test_xgb.npz
inc/: cnarray.hpp  cnarray_c.hpp  py_check.hpp
